# multi_uav_formation

./: README.md
UAV_Navigation/src/amovCar/: CMakeLists.txt  package.xml
UAV_Navigation/src/amovCar/launch/: mission_offboard_car.launch  t265_position_to_mavros.launch
UAV_Navigation/src/mid/image_process/ros_vision/: CMakeLists.txt  README.md  camera_calibration.yaml  package.xml
UAV_Navigation/src/mid/image_process/ros_vision/config/: ar_track_camera.rviz
UAV_Navigation/src/mid/image_process/ros_vision/doc/calibrationdata/: ost.txt  ost.yaml
UAV_Navigation/src/mid/image_process/ros_vision/launch/: ar_track_camera.launch  find_object_2d_camera.launch  motion_detector.launch  usb_cam.launch  usb_cam_with_calibration.launch
UAV_Navigation/src/mid/map/octomap/: CMakeLists.txt  README.md  package.xml
UAV_Navigation/src/mid/map/octomap/launch/: octomap_3Dlidar_mapping.launch  octomap_depthCamera_mapping.launch
UAV_Navigation/src/mid/map/octomap/rviz/: octomap_3Dlidar_demo.rviz
UAV_Navigation/src/mid/slam/ros_slam/: CMakeLists.txt  README.md  package.xml
UAV_Navigation/src/mid/slam/ros_slam/launch/: cartographer_2Dlidar_location.launch  cartographer_2Dlidar_mapping.launch  cartographer_3Dlidar_location.launch  gmapping.launch  rtabmap_depthCam_mapping.launch
UAV_Navigation/src/mid/slam/ros_slam/maps/: carto_mapping_map.pgm  carto_mapping_map.yaml  simulation_gmapping_map.pgm  simulation_gmapping_map.yaml
UAV_Navigation/src/mid/slam/ros_slam/param/: cartographer_2Dlidar_location_params.lua  cartographer_2Dlidar_mapping_params.lua  cartographer_3Dlidar_location_params.lua
UAV_Navigation/src/mid/slam/ros_slam/rviz/: cartographer_2D.rviz  cartographer_3D.rviz  gmapping_slam.rviz
UAV_Navigation/src/modules/matlab/2D_Astar/: A_star_search.m
UAV_Navigation/src/modules/matlab/2D_Astar/A_star/: distance.m  expand_array.m
UAV_Navigation/src/modules/matlab/vfh_gazebo_matlab/: Gazeebo_VFH_fusion_AAJ.m  README.md
UAV_Navigation/src/modules/matlab/vfh_gazebo_matlab/Functions/: Calc_hp.m  calcDanger.m  calc_Hb.m  calc_Target.m  calc_h.m  determine_velocity.m  find_Valleys.m  pickValley.m  pick_Heading.m
UAV_Navigation/src/modules/px4_control/: CMakeLists.txt  README.md  moveit_multi_dof_controller_manager_plugin_description.xml  package.xml
UAV_Navigation/src/modules/px4_control/include/: follow_multi_dof_joint_trajectory_controller_handle.hpp  landing_quadrotor.h  mission_car_offboard.h  offboard_control.h  px4_control_cfg.h  ros_nav_quadrotor.h  tracking_quadrotor.h
UAV_Navigation/src/modules/px4_control/launch/: cartogra_tf_to_mavros.launch  circular.launch  collision_avoidance_matlabvfh.launch  collision_avoidance_vfh.launch  landing.launch  ros_2DNav.launch  t265_tf_to_mavros.launch  tracking.launch
UAV_Navigation/src/modules/px4_control/src/: avoidance_car_vfh.cpp  circular.cpp  circular_car.cpp  collision_avoidance_matlabvfh.cpp  collision_avoidance_vfh.cpp  landing_quadrotor.cpp  mission_car_offboard.cpp  moveit_multi_dof_controller_manager.cpp  moveit_px4_controller.cpp  position_to_mavros.cpp  ros_nav_quadrotor.cpp  set_mode.cpp  tracking_quadrotor.cpp
UAV_Navigation/src/p200/: CMakeLists.txt  README.md  package.xml
UAV_Navigation/src/p200/launch/: landing.launch  t265_position_to_mavros.launch
UAV_Navigation/src/simulation/: CMakeLists.txt
UAV_Navigation/src/simulation/launch/Demo/px4_car/: avoidance_vfh_car.launch  mission_offboard_car.launch
UAV_Navigation/src/simulation/launch/Demo/px4_quadrotor/: cartographer2Dlidar_location_demo_px4.launch  cartographer2Dlidar_mapping_demo_px4.launch  cartographer3Dlidar_location_demo_px4.launch  circular_px4.launch  gmapping_demo_px4.launch  landing_px4.launch  moveit_px4.launch  obstacle_avoidance_2Dlaser_matlab_vfh_px4.launch  obstacle_avoidance_2Dlaser_vfh_px4.launch  octomap_3Dlidar_px4.launch  octomap_depthCamera_px4.launch  ros_2Dnav_demo_px4.launch  rtabmap_depthCam_mapping_demo_px4.launch  tracking_px4.launch
UAV_Navigation/src/simulation/launch/px4/: 2Dlidar_px4.launch  2Dlidar_rover_px4.launch  3Dlidar_px4.launch  camera_down_px4.launch  camera_front_car_px4.launch  depth_camera_px4.launch  iris_px4.launch  irlock_camera_px4.launch  realsense_camera_3Dlidar_px4.launch  realsense_camera_px4.launch  rover_px4.launch  stereo_camera_px4.launch  urdf_px4.launch
UAV_Navigation/src/simulation/launch/zdz_test/: mavros_posix_sitl.launch  multi_uav_mavros_sitl.launch  posix_sitl.launch  single_vehicle_spawn_leader.launch  zdz_2Dlidar_px4.launch  zdz_2Dnav_demo_px4.launch
UAV_Navigation/src/simulation/launch/zdz_test/mavros/: node.launch  px4.launch
UAV_Navigation/src/simulation/models/2Dlidar/: model.sdf
UAV_Navigation/src/simulation/models/amovCar/: amovCar.sdf  model.config
UAV_Navigation/src/simulation/models/amovCar_2Dlidar/: amovCar_2Dlidar.sdf  model.config
UAV_Navigation/src/simulation/models/cloverleaf_interchange/meshes/: cloverleaf.mtl
UAV_Navigation/src/simulation/models/depth_camera_new/: depth_camera_new.sdf
UAV_Navigation/src/simulation/models/iris_depth_camera_down/: iris_depth_camera_down.sdf  model.config
UAV_Navigation/src/simulation/models/landing_place/: model.config  model.sdf
UAV_Navigation/src/simulation/models/landing_place/materials/scripts/: lpcode.material
UAV_Navigation/src/simulation/models/some_house/: model.config  model.sdf
UAV_Navigation/src/simulation/resource/: 1061_amovCar
UAV_Navigation/src/simulation/scripts/: .keyboard_control_px4.py.swp  keyboard_control_px4.py
UAV_Navigation/src/simulation/urdf/car/: prius.urdf
UAV_Navigation/src/simulation/urdf/car/meshes/: landing.dae
UAV_Navigation/src/simulation/worlds/: amovCar.world  house.world  landing_place.world  obstacle.world
multi_uav_formation/rotors_gazebo/launch/multi/: multi_mav.launch  multi_mav_formation.launch  test.launch
multi_uav_formation/rotors_teleop/: CMakeLists.txt  package.xml
multi_uav_formation/rotors_teleop/src/: rotors_formation_son.py  rotors_teleop.py  rotors_teleop_son.py  slave_tf_listener.cpp
(+3 files in other folders)
