<package>
  <name>p200</name>
  <version>0.0.1</version>
  <description>
  amov p200 demo
  </description>
  <author>lw bingo</author>
  <maintainer email="bingobin.lw@gmail.com">lw bingo</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
 

</package>
