<?xml version="1.0"?>
<package format="2">
  <name>px4_control</name>
  <version>0.0.0</version>
  <description>The px4_control package</description>

  <maintainer email="bingobin.lw@gmail.com">Bingo</maintainer>
  <author email="bingobin.lw@gmail.com">Bingo</author>
  <license>TODO</license>

  <url type="website">http://www.amovauto.com/</url>
  <url type="repository">https://gitee.com/bingobinlw/some.git</url>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>pluginlib</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <moveit_core plugin="${prefix}/moveit_multi_dof_controller_manager_plugin_description.xml"/>
  </export>
</package>
