<package>
  <name>octomap</name>
  <version>0.0.1</version>
  <description>
  A octomap demo of px4,with depth camera or 3D lidar
  </description>
  <author>lw bingo</author>
  <maintainer email="bingobin.lw@gmail.com">lw bingo</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>controller_manager</run_depend>


</package>
